fix: remove image card gap

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -3468,7 +3468,7 @@ body.is-white-text .global-button:not(.no-color),body.is-white-text .global-dyna
 }
 
 .post-content .kg-image-card {
-   line-height: 0;
+   line-height: normal;
 }
 
 .post-content .kg-image-card.kg-width-wide img {
